tone layout bugs -VrDateTimepicker and VrSelect  position in modal -VrSelect with  ng-if for required field -VrAction bar in modal border radius -VrDataGrid summary border regresion
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C25254

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -438,6 +438,10 @@ Use this for keyframe animations
     position: relative;
     border-radius: 15px;
 }
+.modal-dialog .action-bar{
+   
+    border-radius: 0px !important;
+}
 .leavecolor{
     background-color: transparent !important;
 }
